# github-stars-search

./: .gitignore  LICENSE  main.py  pyproject.toml
src/github_stars_search/: core.py  main.py
src/github_stars_search/commands/: index.py  search.py  sync.py
